updates to samples (views) for shared content contacts
updated 3 different versions of the left col shared content Contact Info
widget showing different variations of optional fields

--- a/app/views/widgets/left_column/_shared_content_contacts_2.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_2.html
@@ -1,8 +1,9 @@
-<!--- this version has additional (optional) contacts after "Main" --->
+<!--- this version has additional (optional) contacts after "Main"; had 3 of 9 social icons --->
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>
     <h2>Contact Information</h2>
-    <div class="editableContent">
+    
+    <div class="contact-widget editableContent">
     	<p>Information Systems &amp; Technology</p> 
                 
         <p>Main:
@@ -21,26 +22,38 @@
             <br/><a href="mailto:infoSec@chapman.edu">infoSec@chapman.edu</a>  
         </p>
                                                     
-                                                    <p>Hours:
-                        <br/><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p>
-                    </p>
+        <p>Hours:
+        	<br/><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p>
+        </p>
                                     
-                <h3>Location</h3>
-                <p>
-                    635 W. Palm Ave.
-                                        <br/>Orange, CA 92866
-                                                               <br/><a href="https://www.chapman.edu/about/maps-directions/campus-map/index.aspx?s=subCat-a713d6dbc04d744c291bfe8353b34cb3">View Map</a>
-                                    </p>
+        <h3>Location</h3>
+        	<p>
+            	635 W. Palm Ave.
+                <br/>Orange, CA 92866
+                <br/><a href="https://www.chapman.edu/about/maps-directions/campus-map/index.aspx?s=subCat-a713d6dbc04d744c291bfe8353b34cb3">View Map</a>
+           	</p>
 
-                <h3>Mailing Address</h3>
-                <p>
-                    Information Systems &amp; Technology
-                    <br/>Chapman University
-                                            <br/>One University Drive 
-                                        <br/>Orange, CA 92866
-                </p>
-
-    	</div>
+		<div class="more-content hide-more">
+            <h3>Mailing Address</h3>
+            <p>Information Systems &amp; Technology
+                <br/>Chapman University
+                <br/>One University Drive 
+                <br/>Orange, CA 92866
+            </p>
+		</div>
         
+        <h3>Follow Us</h3>
+		<ul class="left-social-icons">
+            <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
+            <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>  
+            <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
+        </ul> 
         
+</div> <!-- end contact-widget -->
+    
+    <div class="view-more-button">
+        <a class="view-more show-more"><div class="icon icon-solid-arrow-down"></div><div>View More</div></a>
+        <a class="view-less hide-more"><div class="icon icon-solid-arrow-up"></div><div>View Less</div></a>
     </div>
+      
+</div> <!-- end callout-box-widget--left -->
