--- a/app/views/widgets/left_column/_shared_content_contacts_3.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_3.html
@@ -1,4 +1,4 @@
-<!--- this version has the social follow us image/links at top --->
+<!--- this version has the social follow us image/links at top; had all 9 social icons --->
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>     
 	<h2>Contact Information</h2>
@@ -13,8 +13,9 @@
         
         <h3>Location</h3>
         
-        <p>One University Drive
-           <br/>Orange, CA 92866
+        <p>Moulton Hall
+        	<br/>Chapman Campus
+        	<br/>Orange, CA 92866
         </p>        
         
         <div class="more-content hide-more">
@@ -74,13 +75,3 @@
     </div>
       
 </div> <!-- end callout-box-widget--left -->
-
-<script type="text/javascript">
-	/*$(".view-more-button").click(function () {
-		//Note toggleClass removes if class exists on element and adds if missing so can list both and will toggle between show and hide:		
-		$(this).siblings(".contact-widget").toggleClass("show-more").children(".more-content").slideToggle('slow');			
-		$(this).children(".view-more").toggleClass("show-more hide-more").children(".view-more").slideToggle('fast');
-		$(this).children(".view-less").toggleClass("hide-more show-more").children(".view-less").slideToggle('fast');
-	});	
-	*/
-</script>
