--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -1,16 +1,19 @@
-<!--- this version has the optional Individual Contacts at the bottom --->
+<!--- this version has the optional Individual Contacts at the bottom; had NO social icons --->
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>
     <h2>Contact Information</h2>
-    <div class="editableContent">
+    
+    <div class="contact-widget editableContent">
         <p>Strategic Marketing &amp; Communication</p> 
         
         <p>Main:
             <br/><a href="tel:7149976661">(714) 997-6661</a>
             <br/><a href="mailto:smc@chapman.edu">smc@chapman.edu</a>
         </p>
-        <p>Hours:
-                <br/>8 a.m. to 5 p.m.
+        
+        <p>
+        	Hours:
+            <br/>8 a.m. to 5 p.m.
         </p>
                             
         <h3>Location</h3>
@@ -20,39 +23,47 @@
            <br/>Orange, CA 92866
         </p>
 
-        <h3>Mailing Address</h3>
-        
-        <p>Strategic Marketing &amp; Communication
-           <br/>Chapman University
-           <br/>One University Drive 
-           <br/>Orange, CA 92866
-        </p>
-
-		<h3>Individual Contact(s)</h3> 
-        <p>
-                    Esther Choi
-                    <br/>Account Manager
-                    <br/><a href="tel:7149976582">(714) 997-6582</a> 
-                    <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
-        </p>
-        <p>
-                    Drew Farrington
-                    <br/>Account Manager
-                    <br/><a href="tel:7142893142">(714) 289-3142</a> 
-                    <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
-        </p>
-        <p>
-                    Carl Minor
-                    <br/>Account Manager
-                    <br/><a href="tel:7146287214">(714) 628-7214</a> 
-                    <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
-        </p>
-        <p>
-                    Gina Madson
-                    <br/>Account Manager
-                    <br/><a href="tel:7147447961">(714) 744-7961</a> 
-                    <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
-        </p>
-
-	</div>
-</div>
+		<div class="more-content hide-more">
+            <h3>Mailing Address</h3>
+            
+            <p>Strategic Marketing &amp; Communication
+               <br/>Chapman University
+               <br/>One University Drive 
+               <br/>Orange, CA 92866
+            </p>
+    
+            <h3>Individual Contact(s)</h3> 
+            <p>
+                        Esther Choi
+                        <br/>Account Manager
+                        <br/><a href="tel:7149976582">(714) 997-6582</a> 
+                        <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
+            </p>
+            <p>
+                        Drew Farrington
+                        <br/>Account Manager
+                        <br/><a href="tel:7142893142">(714) 289-3142</a> 
+                        <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
+            </p>
+            <p>
+                        Carl Minor
+                        <br/>Account Manager
+                        <br/><a href="tel:7146287214">(714) 628-7214</a> 
+                        <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
+            </p>
+            <p>
+                        Gina Madson
+                        <br/>Account Manager
+                        <br/><a href="tel:7147447961">(714) 744-7961</a> 
+                        <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
+            </p>
+		</div>  
+    	
+	</div> <!-- end contact-widget -->
+    
+    <div class="view-more-button">
+        <a class="view-more show-more"><div class="icon icon-solid-arrow-down"></div><div>View More</div></a>
+        <a class="view-less hide-more"><div class="icon icon-solid-arrow-up"></div><div>View Less</div></a>
+    </div>
+      
+</div> <!-- end callout-box-widget--left -->
