--- a/app/assets/stylesheets/themes/law.scss
+++ b/app/assets/stylesheets/themes/law.scss
@@ -250,11 +250,21 @@
             background-color: #002562;
         }
     }
-
     
     .midPhotoCallouts .photoCallout .caption,
     .photoCallouts .caption,
     .photoCallouts .rollover{
          background-color: #002f7c;
     }
+
+    .leftNavSubContent .callout .view-more-expander {
+    background-color: #002f7c;
+    .icon-triangle-down {
+      background-color: #002f7c;
+    }
+    .icon-triangle-up {
+      background-color: #d8d8d8;
+      color: #002f7c;
+    }
+  }
 }
