--- a/app/views/3_column/sample-college.html.erb
+++ b/app/views/3_column/sample-college.html.erb
@@ -18,6 +18,9 @@
     - primary_content/logo_image_rotator_1
 
   left_column:
+    - left_column/shared_content_contacts_1.html
+    - left_column/shared_content_contacts_2.html
+    - left_column/shared_content_contacts_3.html
     - left_column/callout_1
     - left_column/callout_2
     - left_column/callout_3
