--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -3,67 +3,93 @@
 	<div class="border"> </div>
     <h2>Contact Information</h2>
     
-    <div class="contact-widget editableContent">
-        <p>Strategic Marketing &amp; Communication</p> 
-        
-        <p>Main:
-            <br/><a href="tel:7149976661">(714) 997-6661</a>
-            <br/><a href="mailto:smc@chapman.edu">smc@chapman.edu</a>
-        </p>
-        
-        <p>
-        	Hours:
-            <br/>8 a.m. to 5 p.m.
-        </p>
-                            
-        <h3>Location</h3>
-        
-        <p>633 West Palm
-           <br/>Suite 118A 
-           <br/>Orange, CA 92866
-        </p>
-
-		<div class="more-content hide-more">
-            <h3>Mailing Address</h3>
+    <div class="contact-widget">
+    	<div class="editableContent">
+            <p>Strategic Marketing &amp; Communication</p> 
             
-            <p>Strategic Marketing &amp; Communication
-               <br/>Chapman University
-               <br/>One University Drive 
+            <p>Main:
+                <br/><a href="tel:7149976661">(714) 997-6661</a>
+                <br/><a href="mailto:smc@chapman.edu">smc@chapman.edu</a>
+            </p>
+            
+            <p>
+                Hours:
+                <br/>8 a.m. to 5 p.m.
+            </p>
+                                
+            <h3>Location</h3>            
+            <p>633 West Palm
+               <br/>Suite 118A 
                <br/>Orange, CA 92866
             </p>
     
-            <h3>Individual Contact(s)</h3> 
-            <p>
-                        Esther Choi
-                        <br/>Account Manager
-                        <br/><a href="tel:7149976582">(714) 997-6582</a> 
-                        <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
-            </p>
-            <p>
-                        Drew Farrington
-                        <br/>Account Manager
-                        <br/><a href="tel:7142893142">(714) 289-3142</a> 
-                        <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
-            </p>
-            <p>
-                        Carl Minor
-                        <br/>Account Manager
-                        <br/><a href="tel:7146287214">(714) 628-7214</a> 
-                        <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
-            </p>
-            <p>
-                        Gina Madson
-                        <br/>Account Manager
-                        <br/><a href="tel:7147447961">(714) 744-7961</a> 
-                        <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
-            </p>
-		</div>  
+            <div class="more-content inactive">
+                <h3>Mailing Address</h3>
+                
+                <p>Strategic Marketing &amp; Communication
+                   <br/>Chapman University
+                   <br/>One University Drive 
+                   <br/>Orange, CA 92866
+                </p>
+        
+                <h3>Individual Contact(s)</h3> 
+                <p>
+                    Esther Choi
+                    <br/>Account Manager
+                    <br/><a href="tel:7149976582">(714) 997-6582</a> 
+                    <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
+                </p>
+                <p>
+                    Drew Farrington
+                    <br/>Account Manager
+                    <br/><a href="tel:7142893142">(714) 289-3142</a> 
+                    <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
+                </p>
+                <p>
+                    Carl Minor
+                    <br/>Account Manager
+                    <br/><a href="tel:7146287214">(714) 628-7214</a> 
+                    <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
+                </p>
+                <p>
+                    Gina Madson
+                    <br/>Account Manager
+                    <br/><a href="tel:7147447961">(714) 744-7961</a> 
+                    <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
+                </p>
+            </div>  
     	
+        </div> <!-- end editableContent -->
+    	
+        <div class="view-more-expander"> 
+            <a class="view-more active">
+                <span class="icon icon-triangle-down">
+                	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs>
+							<symbol id="icon-triangle-down" viewBox="0 0 24 32">
+								<title>triangle-down</title>
+								<path d="M0 12l11.992 11.992 11.992-11.992h-23.984z"></path>
+							</symbol>
+						</defs>
+					</svg>
+					<svg class="icon icon-triangle-down"><use xlink:href="#icon-triangle-down"></use></svg>
+                </span>
+                <div class="view-more-link">View More</div>
+            </a>
+            <a class="view-less inactive">
+                <span class="icon icon-triangle-up">
+                	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs>
+						<symbol id="icon-triangle-up" viewBox="0 0 24 32">
+							<title>triangle-up</title>
+							<path d="M11.992 8l-11.992 11.992h23.984l-11.992-11.992z"></path>
+						</symbol>
+						</defs>
+					</svg>
+					<svg class="icon icon-triangle-up"><use xlink:href="#icon-triangle-up"></use></svg>
+                </span>
+                <div class="view-less-link">View Less</div>
+            </a>
+        </div>
 	</div> <!-- end contact-widget -->
-    
-    <div class="view-more-button">
-        <a class="view-more show-more"><div class="icon icon-solid-arrow-down"></div><div>View More</div></a>
-        <a class="view-less hide-more"><div class="icon icon-solid-arrow-up"></div><div>View Less</div></a>
-    </div>
-      
 </div> <!-- end callout-box-widget--left -->
