--- a/app/assets/stylesheets/themes/business.scss
+++ b/app/assets/stylesheets/themes/business.scss
@@ -60,4 +60,14 @@
     }
   }
 
+  .leftNavSubContent .callout .view-more-expander {
+    background-color: $asbe-primary;
+    .icon-triangle-down {
+      background-color: $asbe-primary;
+    }
+    .icon-triangle-up {
+      background-color: #d8d8d8;
+      color: $asbe-primary;
+    }
+  }
 }
