--- a/app/views/widgets/left_column/_shared_content_contacts_2.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_2.html
@@ -3,57 +3,87 @@
 	<div class="border"> </div>
     <h2>Contact Information</h2>
     
-    <div class="contact-widget editableContent">
-    	<p>Information Systems &amp; Technology</p> 
-                
-        <p>Main:
-            <br/><a href="tel:7149976600">(714) 997-6600</a>
-            <br/><a href="mailto:servicedesk@chapman.edu">servicedesk@chapman.edu</a>
-        </p>
-                
-        <p>
-            Front Desk
-            <br/><a href="tel:${suppPhoneS}">714-997-6726</a> 
-            <br/><a href="mailto:"></a>  
-        </p>
-        <p>
-            Information Security
-            <br/><a href="tel:${suppPhoneS}">714-744-7972</a> 
-            <br/><a href="mailto:infoSec@chapman.edu">infoSec@chapman.edu</a>  
-        </p>
-                                                    
-        <p>Hours:
-        	<br/><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p>
-        </p>
-                                    
-        <h3>Location</h3>
-        	<p>
-            	635 W. Palm Ave.
-                <br/>Orange, CA 92866
-                <br/><a href="https://www.chapman.edu/about/maps-directions/campus-map/index.aspx?s=subCat-a713d6dbc04d744c291bfe8353b34cb3">View Map</a>
-           	</p>
-
-		<div class="more-content hide-more">
-            <h3>Mailing Address</h3>
-            <p>Information Systems &amp; Technology
-                <br/>Chapman University
-                <br/>One University Drive 
-                <br/>Orange, CA 92866
+    <div class="contact-widget">
+    	<div class="editableContent">
+            <p>Information Systems &amp; Technology</p> 
+                    
+            <p>Main:
+                <br/><a href="tel:7149976600">(714) 997-6600</a>
+                <br/><a href="mailto:servicedesk@chapman.edu">servicedesk@chapman.edu</a>
+            </p>           
+                                                        
+            <p>Hours:
+                <br/><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p>
             </p>
-		</div>
-        
-        <h3>Follow Us</h3>
-		<ul class="left-social-icons">
-            <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
-            <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>  
-            <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
-        </ul> 
-        
-</div> <!-- end contact-widget -->
+                                        
+            <h3>Location</h3>
+                <p>
+                    635 W. Palm Ave.
+                    <br/>Orange, CA 92866
+                    <br/><a href="https://www.chapman.edu/about/maps-directions/campus-map/index.aspx?s=subCat-a713d6dbc04d744c291bfe8353b34cb3">View Map</a>
+                </p>
     
-    <div class="view-more-button">
-        <a class="view-more show-more"><div class="icon icon-solid-arrow-down"></div><div>View More</div></a>
-        <a class="view-less hide-more"><div class="icon icon-solid-arrow-up"></div><div>View Less</div></a>
-    </div>
-      
+            <div class="more-content inactive">
+                <h3>Mailing Address</h3>
+                <p>Information Systems &amp; Technology
+                    <br/>Chapman University
+                    <br/>One University Drive 
+                    <br/>Orange, CA 92866
+                </p>
+                
+                <h3>Supplemental Contact(s)</h3> 
+                <p>
+                    Front Desk
+                    <br/><a href="tel:${suppPhoneS}">714-997-6726</a> 
+                    <br/><a href="mailto:"></a>  
+                </p>
+                <p>
+                    Information Security
+                    <br/><a href="tel:${suppPhoneS}">714-744-7972</a> 
+                    <br/><a href="mailto:infoSec@chapman.edu">infoSec@chapman.edu</a>  
+                </p>
+            </div>
+            
+            <div class="social-follow-us">
+                <h3>Follow Us</h3>
+                <ul class="left-social-icons">
+                    <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
+                    <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>  
+                    <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
+                </ul> 
+            </div>
+        
+        </div> <!-- end editableContent -->
+    	
+        <div class="view-more-expander"> 
+            <a class="view-more active">
+                <span class="icon icon-triangle-down">
+                	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs>
+							<symbol id="icon-triangle-down" viewBox="0 0 24 32">
+								<title>triangle-down</title>
+								<path d="M0 12l11.992 11.992 11.992-11.992h-23.984z"></path>
+							</symbol>
+						</defs>
+					</svg>
+					<svg class="icon icon-triangle-down"><use xlink:href="#icon-triangle-down"></use></svg>
+                </span>
+                <div class="view-more-link">View More</div>
+            </a>
+            <a class="view-less inactive">
+                <span class="icon icon-triangle-up">
+                	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs>
+						<symbol id="icon-triangle-up" viewBox="0 0 24 32">
+							<title>triangle-up</title>
+							<path d="M11.992 8l-11.992 11.992h23.984l-11.992-11.992z"></path>
+						</symbol>
+						</defs>
+					</svg>
+					<svg class="icon icon-triangle-up"><use xlink:href="#icon-triangle-up"></use></svg>
+                </span>
+                <div class="view-less-link">View Less</div>
+            </a>
+        </div>
+	</div> <!-- end contact-widget -->
 </div> <!-- end callout-box-widget--left -->
