--- a/app/views/widgets/left_column/_shared_content_contacts_3.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_3.html
@@ -3,75 +3,103 @@
 	<div class="border"> </div>     
 	<h2>Contact Information</h2>
                     
-    <div class="contact-widget editableContent">
-        <p>Schmid College of Science &amp; Technology</p> 
+    <div class="contact-widget">
+    	<div class="editableContent">
+            <p>Schmid College of Science &amp; Technology</p> 
+                
+            <p>Main:
+               <br/><a href="tel:7146287318">(714) 628-7318</a>
+               <br/><a href="mailto:schmidcollege@chapman.edu">schmidcollege@chapman.edu</a>
+            </p>
             
-        <p>Main:
-           <br/><a href="tel:7146287318">(714) 628-7318</a>
-           <br/><a href="mailto:schmidcollege@chapman.edu">schmidcollege@chapman.edu</a>
-        </p>
+            <h3>Location</h3>
+            
+            <p>Moulton Hall
+                <br/>Chapman Campus
+                <br/>Orange, CA 92866
+            </p>        
+            
+            <div class="more-content inactive">
+            
+                <h3>Mailing Address</h3>        
+                <p>Schmid College of Science &amp; Technology
+                   <br/>Chapman University
+                   <br/>One University Drive 
+                   <br/>Orange, CA 92866
+                </p>
+            
+                <h3>Individual Contact(s)</h3> 
+                <p>
+                    Esther Choi
+                    <br/>Account Manager
+                    <br/><a href="tel:7149976582">(714) 997-6582</a> 
+                    <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
+                </p>
+                <p>
+                    Drew Farrington
+                    <br/>Account Manager
+                    <br/><a href="tel:7142893142">(714) 289-3142</a> 
+                    <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
+                </p>
+                <p>
+                    Carl Minor
+                    <br/>Account Manager
+                    <br/><a href="tel:7146287214">(714) 628-7214</a> 
+                    <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
+                </p>
+                <p>
+                    Gina Madson
+                    <br/>Account Manager
+                    <br/><a href="tel:7147447961">(714) 744-7961</a> 
+                    <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
+                </p>        
+        	</div>
         
-        <h3>Location</h3>
-        
-        <p>Moulton Hall
-        	<br/>Chapman Campus
-        	<br/>Orange, CA 92866
-        </p>        
-        
-        <div class="more-content hide-more">
-        
-        	<h3>Mailing Address</h3>        
-            <p>Schmid College of Science &amp; Technology
-               <br/>Chapman University
-               <br/>One University Drive 
-               <br/>Orange, CA 92866
-            </p>
-        
-        	<h3>Individual Contact(s)</h3> 
-            <p>
-                        Esther Choi
-                        <br/>Account Manager
-                        <br/><a href="tel:7149976582">(714) 997-6582</a> 
-                        <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
-            </p>
-            <p>
-                        Drew Farrington
-                        <br/>Account Manager
-                        <br/><a href="tel:7142893142">(714) 289-3142</a> 
-                        <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
-            </p>
-            <p>
-                        Carl Minor
-                        <br/>Account Manager
-                        <br/><a href="tel:7146287214">(714) 628-7214</a> 
-                        <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
-            </p>
-            <p>
-                        Gina Madson
-                        <br/>Account Manager
-                        <br/><a href="tel:7147447961">(714) 744-7961</a> 
-                        <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
-            </p>
-        </div>
-        
-        <h3>Follow Us</h3>
-		<ul class="left-social-icons">
-            <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
-            <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>    
-            <li><a href="#" title="Instagram"><span class="icon icon-instagram"></span><span style="display:none;">Instagram</span></a></li>
-            <li><a href="#" title="Linked In"><span class="icon icon-linkedin2"></span><span style="display:none;">Linked In</span></a></li> 
-            <li><a href="#" title="youTube"><span class="icon icon-youtube2"></span><span style="display:none;">youTube</span></a></li>    
-            <li><a href="#" title="Pinterest"><span class="icon icon-pinterest"></span><span style="display:none;">Pinterest</span></a></li>             
-            <li><a href="#" title="Vimeo"><span class="icon icon-vimeo"></span><span style="display:none;">Vimeo</span></a></li> 
-            <li><a href="#" title="Snapchat"><span class="icon icon-snapchat-ghost"></span></a><span style="display:none;">Snapchat</span></li>  
-            <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
-        </ul>      
+            <div class="social-follow-us">
+                <h3>Follow Us</h3>
+                <ul class="left-social-icons">
+                    <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
+                    <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>    
+                    <li><a href="#" title="Instagram"><span class="icon icon-instagram"></span><span style="display:none;">Instagram</span></a></li>
+                    <li><a href="#" title="Linked In"><span class="icon icon-linkedin2"></span><span style="display:none;">Linked In</span></a></li> 
+                    <li><a href="#" title="youTube"><span class="icon icon-youtube2"></span><span style="display:none;">youTube</span></a></li>    
+                    <li><a href="#" title="Pinterest"><span class="icon icon-pinterest"></span><span style="display:none;">Pinterest</span></a></li>             
+                    <li><a href="#" title="Vimeo"><span class="icon icon-vimeo"></span><span style="display:none;">Vimeo</span></a></li> 
+                    <li><a href="#" title="Snapchat"><span class="icon icon-snapchat-ghost"></span></a><span style="display:none;">Snapchat</span></li>  
+                    <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
+                </ul>  
+            </div>    
+        </div> <!-- end editableContent -->
     	
+        <div class="view-more-expander"> 
+            <a class="view-more active">
+                <span class="icon icon-triangle-down">
+                	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs>
+							<symbol id="icon-triangle-down" viewBox="0 0 24 32">
+								<title>triangle-down</title>
+								<path d="M0 12l11.992 11.992 11.992-11.992h-23.984z"></path>
+							</symbol>
+						</defs>
+					</svg>
+					<svg class="icon icon-triangle-down"><use xlink:href="#icon-triangle-down"></use></svg>
+                </span>
+                <div class="view-more-link">View More</div>
+            </a>
+            <a class="view-less inactive">
+                <span class="icon icon-triangle-up">
+                	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs>
+						<symbol id="icon-triangle-up" viewBox="0 0 24 32">
+							<title>triangle-up</title>
+							<path d="M11.992 8l-11.992 11.992h23.984l-11.992-11.992z"></path>
+						</symbol>
+						</defs>
+					</svg>
+					<svg class="icon icon-triangle-up"><use xlink:href="#icon-triangle-up"></use></svg>
+                </span>
+                <div class="view-less-link">View Less</div>
+            </a>
+        </div>
 	</div> <!-- end contact-widget -->
-    
-    <div class="view-more-button">
-        <a class="view-more show-more"><div class="icon icon-solid-arrow-down"></div><div>View More</div></a>
-        <a class="view-less hide-more"><div class="icon icon-solid-arrow-up"></div><div>View Less</div></a>
-    </div>
-      
 </div> <!-- end callout-box-widget--left -->
