more tweaks to svg icons

--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -66,9 +66,9 @@
                 <span class="icon icon-triangle-down">
                 	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<defs>
-							<symbol id="icon-triangle-down" viewBox="0 0 24 32">
+							<symbol id="icon-triangle-down" viewBox="0 0 12 16">
 								<title>triangle-down</title>
-								<path d="M0 12l11.992 11.992 11.992-11.992h-23.984z"></path>
+								<path d="M0,7l6,4l6-4C12,7,0,7,0,7z"></path>
 							</symbol>
 						</defs>
 					</svg>
@@ -76,13 +76,14 @@
                 </span>
                 <div class="view-more-link">View More</div>
             </a>
+            
             <a class="view-less inactive">
                 <span class="icon icon-triangle-up">
                 	<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<defs>
-						<symbol id="icon-triangle-up" viewBox="0 0 24 32">
+						<symbol id="icon-triangle-up" viewBox="0 0 12 16">
 							<title>triangle-up</title>
-							<path d="M11.992 8l-11.992 11.992h23.984l-11.992-11.992z"></path>
+							<path d="M6,6l-6,4h12L6,6z"></path>
 						</symbol>
 						</defs>
 					</svg>
