--- a/app/assets/stylesheets/themes/crean.scss
+++ b/app/assets/stylesheets/themes/crean.scss
@@ -60,12 +60,16 @@
   }
 
   .leftNavSubContent .callout .view-more-expander {
-    background-color: $crean-primary;
-    .icon-triangle-down {
+    .view-more {
+      background-color: $crean-primary;
+    }
+    .view-more-link {
+      background-color: $crean-primary;
+    }
+    .view-less-link {
       background-color: $crean-primary;
     }
     .icon-triangle-up {
-      background-color: #d8d8d8;
       color: $crean-primary;
     }
   }
