--- a/app/assets/stylesheets/components/left-nav-sub-content.scss
+++ b/app/assets/stylesheets/components/left-nav-sub-content.scss
@@ -75,8 +75,9 @@
 				}
 				a {			
 					color: $white;
-					font-size: 13px;
-					font-weight: 500;
+					font-size: 10px;
+					font-weight: 700;
+					letter-spacing: 1px;
 					text-transform:uppercase;
 					padding: 0;
 					&:hover  {			
