--- a/app/views/widgets/left_column/_shared_content_contacts_2.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_2.html
@@ -1,4 +1,4 @@
-<!--- this version has additional (optional) contacts after "Main"; had 3 of 9 social icons --->
+<!--- this version has additional (optional) contacts after "Main"; has 4 of 9 social icons --->
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>
     <h2>Contact Information</h2>
@@ -34,12 +34,12 @@
                 <h3>Supplemental Contact(s)</h3> 
                 <p>
                     Front Desk
-                    <br/><a href="tel:${suppPhoneS}">714-997-6726</a> 
-                    <br/><a href="mailto:"></a>  
+                    <br/><a href="tel:7149976726">714-997-6726</a> 
+                      
                 </p>
                 <p>
                     Information Security
-                    <br/><a href="tel:${suppPhoneS}">714-744-7972</a> 
+                    <br/><a href="tel:7147447972">714-744-7972</a> 
                     <br/><a href="mailto:infoSec@chapman.edu">infoSec@chapman.edu</a>  
                 </p>
             </div>
@@ -47,10 +47,12 @@
             <div class="social-follow-us">
                 <h3>Follow Us</h3>
                 <ul class="left-social-icons">
-                    <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
-                    <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>  
-                    <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
-                </ul> 
+                    <li><a href="https://www.facebook.com/ChapmanUniversity/" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
+                    <li><a href="https://twitter.com/chapmanu" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>    
+                    <li><a href="https://instagram.com/chapmanufamily" title="Instagram"><span class="icon icon-instagram"></span><span style="display:none;">Instagram</span></a></li>
+                    <li><a href="https://www.snapchat.com/add/chapmanu" title="Snapchat"><span class="icon icon-snapchat-ghost"></span></a><span style="display:none;">Snapchat</span></li>  
+                    <li class="last"><a href="https://blogs.chapman.edu/happenings/" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
+                </ul>  
             </div>
         
         </div> <!-- end editableContent -->
