--- a/app/views/widgets/left_column/_shared_content_contacts_3.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_3.html
@@ -58,15 +58,15 @@
             <div class="social-follow-us">
                 <h3>Follow Us</h3>
                 <ul class="left-social-icons">
-                    <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
-                    <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>    
-                    <li><a href="#" title="Instagram"><span class="icon icon-instagram"></span><span style="display:none;">Instagram</span></a></li>
+                    <li><a href="https://www.facebook.com/ChapmanUniversity/" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
+                    <li><a href="https://twitter.com/chapmanu" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>    
+                    <li><a href="https://instagram.com/chapmanufamily" title="Instagram"><span class="icon icon-instagram"></span><span style="display:none;">Instagram</span></a></li>
                     <li><a href="#" title="Linked In"><span class="icon icon-linkedin2"></span><span style="display:none;">Linked In</span></a></li> 
                     <li><a href="#" title="youTube"><span class="icon icon-youtube2"></span><span style="display:none;">youTube</span></a></li>    
                     <li><a href="#" title="Pinterest"><span class="icon icon-pinterest"></span><span style="display:none;">Pinterest</span></a></li>             
                     <li><a href="#" title="Vimeo"><span class="icon icon-vimeo"></span><span style="display:none;">Vimeo</span></a></li> 
-                    <li><a href="#" title="Snapchat"><span class="icon icon-snapchat-ghost"></span></a><span style="display:none;">Snapchat</span></li>  
-                    <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
+                    <li><a href="https://www.snapchat.com/add/chapmanu" title="Snapchat"><span class="icon icon-snapchat-ghost"></span></a><span style="display:none;">Snapchat</span></li>  
+                    <li class="last"><a href="https://blogs.chapman.edu/happenings/" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
                 </ul>  
             </div>    
         </div> <!-- end editableContent -->
