created brochure masthead

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,6 +29,7 @@
         <li><%= link_to 'Ad Landing Page', '/ad_landing_page/sample' %></li>
         <li><%= link_to 'One Column Hero Side Panel', '/one_column/hero_side_panel' %></li>
         <li><%= link_to 'One Column Landing Page', '/one_column/landing_page' %></li>
+        <li><%= link_to 'One Column Brochure Page', '/one_column/brochure_page' %></li>
         <li><%= link_to 'Two Column Page', '/two_column/sample' %></li>
         <li><%= link_to 'Two Column Form', '/two_column/form' %></li>
         <li><%= link_to 'Two Column Law Theme', '/two_column/law_theme' %></li>
