--- a/app/assets/stylesheets/regions/mastheads/brochure-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/brochure-masthead.scss
@@ -108,10 +108,13 @@
     .cd-hero-slider {
       list-style-type: none;
 
-      li {
+      li, .background-image {
         width: 100%;
         height: 100%;
         margin: 0;
+      }
+
+      .background-image {
         background-repeat: no-repeat;
         background-size: cover;
       }
