--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -5,7 +5,7 @@
     
     <div class="contact-widget">
     	<div class="editableContent">
-            <p>Strategic Marketing &amp; Communication</p> 
+            <h3>Strategic Marketing &amp; Communication</h3> 
             
             <p>Main:
                 <br/><a href="tel:7149976661">(714) 997-6661</a>
