make Hours in widget an h3

--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -12,10 +12,8 @@
                 <br/><a href="mailto:smc@chapman.edu">smc@chapman.edu</a>
             </p>
             
-            <p>
-                Hours:
-                <br/>8 a.m. to 5 p.m.
-            </p>
+            <h3>Hours:</h3>
+                <div><p>8 a.m. to 5 p.m.</p></div>
                                 
             <h3>Location</h3>            
             <p>633 West Palm
