--- a/app/views/widgets/left_column/_shared_content_contacts_2.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_2.html
@@ -12,9 +12,8 @@
                 <br/><a href="mailto:servicedesk@chapman.edu">servicedesk@chapman.edu</a>
             </p>           
                                                         
-            <p>Hours:
-                <br/><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p>
-            </p>
+            <h3>Hours:</h3>
+                <div><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p></div>
                                         
             <h3>Location</h3>
                 <p>
