--- a/app/views/widgets/masthead/_brochure.html
+++ b/app/views/widgets/masthead/_brochure.html
@@ -17,8 +17,8 @@
       <ul class="cd-hero-slider autoplay">
         <li class="selected" >
           <div class="background-video-wrapper">
-            <video id="background-video" class="background-video" muted="muted" aria-label="Welcome to Chapman montage" autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/welcome-2015.jpg">
-              <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/welcome-2016.mp4" type="video/mp4">
+            <video id="background-video" class="background-video" muted="muted" aria-label="Welcome to Chapman montage" autoplay="true" loop="true" poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/welcome-2015.jpg">
+              <source src="http://www.chapman.edu/_files/img/hero-panels/html5-videos/welcome-2016.mp4" type="video/mp4" />
             </video>
           </div>
         </li>
