change headings on left col contacts widget
change some h3 to h4 and add css for them

--- a/app/assets/stylesheets/components/left-nav-sub-content.scss
+++ b/app/assets/stylesheets/components/left-nav-sub-content.scss
@@ -21,7 +21,13 @@
 			background-color: #c1c1c1;
 		}
 
-		.contact-widget {				
+		.contact-widget {		
+			h3, h4 {
+				margin: 5px 0;
+				font-size: 14px;
+				font-weight: 600;
+				line-height: 16px;
+			}				
 			ul.left-social-icons {
 				background-color: transparent;
 				display: block;
