--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -12,17 +12,18 @@
                 <br/><a href="mailto:smc@chapman.edu">smc@chapman.edu</a>
             </p>
             
-            <h3>Hours:</h3>
-                <div><p>8 a.m. to 5 p.m.</p></div>
+            <div>Hours:</div>
+            <!--- note the Hours field is a wysiwyg so don't know if they'll have P tag around it or not. Use div so not embedded P tags --->
+            <div><p>8 a.m. to 5 p.m.</p></div>
                                 
-            <h3>Location</h3>            
+            <h4>Location</h4>            
             <p>633 West Palm
                <br/>Suite 118A 
                <br/>Orange, CA 92866
             </p>
     
             <div class="more-content inactive">
-                <h3>Mailing Address</h3>
+                <h4>Mailing Address</h4>
                 
                 <p>Strategic Marketing &amp; Communication
                    <br/>Chapman University
@@ -30,7 +31,7 @@
                    <br/>Orange, CA 92866
                 </p>
         
-                <h3>Individual Contact(s)</h3> 
+                <h4>Individual Contact(s)</h4> 
                 <p>
                     Esther Choi
                     <br/>Account Manager
