--- a/app/views/widgets/left_column/_shared_content_contacts_2.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_2.html
@@ -10,41 +10,37 @@
             <p>Main:
                 <br/><a href="tel:7149976600">(714) 997-6600</a>
                 <br/><a href="mailto:servicedesk@chapman.edu">servicedesk@chapman.edu</a>
-            </p>           
+            </p>  
+            
+            <p>Front Desk:
+                <br/><a href="tel:7149976726">714-997-6726</a>                  
+            </p>
+            <p>Information Security:
+                <br/><a href="tel:7147447972">714-744-7972</a> 
+                <br/><a href="mailto:infoSec@chapman.edu">infoSec@chapman.edu</a>  
+            </p>         
                                                         
-            <h3>Hours:</h3>
-                <div><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch hour.</p></div>
-                                        
-            <h3>Location</h3>
-                <p>
-                    635 W. Palm Ave.
-                    <br/>Orange, CA 92866
-                    <br/><a href="https://www.chapman.edu/about/maps-directions/campus-map/index.aspx?s=subCat-a713d6dbc04d744c291bfe8353b34cb3">View Map</a>
-                </p>
+            <div>Hours:</div>
+            <!--- note the Hours field is a wysiwyg so don't know if they'll have P tag around it or not. Use div so not embedded P tags --->
+            <div><p>Office open for walk-in 8:00am to 12noon, 1:00pm to 5:00pm. Closed from 12noon to 1:00pm for lunch.</p></div>
+                
+            <h4>Location</h4>            
+            <p>635 West Palm
+               <br/>Orange, CA 92866
+               <br/><a href="https://www.chapman.edu/about/maps-directions/campus-map/index.aspx?s=subCat-a713d6dbc04d744c291bfe8353b34cb3">View Map</a>
+            </p>
     
             <div class="more-content inactive">
-                <h3>Mailing Address</h3>
+                <h4>Mailing Address</h4>
                 <p>Information Systems &amp; Technology
                     <br/>Chapman University
                     <br/>One University Drive 
                     <br/>Orange, CA 92866
-                </p>
-                
-                <h3>Supplemental Contact(s)</h3> 
-                <p>
-                    Front Desk
-                    <br/><a href="tel:7149976726">714-997-6726</a> 
-                      
-                </p>
-                <p>
-                    Information Security
-                    <br/><a href="tel:7147447972">714-744-7972</a> 
-                    <br/><a href="mailto:infoSec@chapman.edu">infoSec@chapman.edu</a>  
-                </p>
+                </p>         
             </div>
             
             <div class="social-follow-us">
-                <h3>Follow Us</h3>
+                <h4>Follow Us</h4>
                 <ul class="left-social-icons">
                     <li>
                     	<a href="https://www.facebook.com/ChapmanUniversity/" title="facebook">
