--- a/app/assets/stylesheets/components/left-nav-sub-content.scss
+++ b/app/assets/stylesheets/components/left-nav-sub-content.scss
@@ -43,6 +43,7 @@
 					position: relative;
 					padding-right: 12px;
 					font-size: 16px;
+					margin-bottom: 4px;
 					&.last {
 						padding-right:0;
 					}
