--- a/app/assets/stylesheets/regions/mastheads/brochure-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/brochure-masthead.scss
@@ -64,6 +64,7 @@
       line-height: 32px;
       margin: 0;
       color: white;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 
       @include media($large-screen)  {
         font-size: 48px;
