--- a/app/views/widgets/single_column/_chapman_events_feed.html
+++ b/app/views/widgets/single_column/_chapman_events_feed.html
@@ -1,21 +1,14 @@
-<div class="chapman-events-feed-widget chapman-events-feed-widget__dark-bg">
+<div class="chapman-events-feed-widget chapman-events-feed-widget__medium-bg">
   <div class="outer-container">
-  
-    <div data-chapman-events-feed="https://eventsdev.chapman.edu">
-
-      <div class="section-message">
-        <div data-chapman-featured-event="https://eventsdev.chapman.edu/4352"></div>
-        <h4 class="category">category</h4>
-        <h2 class="title">Screenings, Master Classes, and Film Festivals</h2>
-        <div class="body">
-          <p>
-            Students at Chapman University's Dodge College of Film and Media Arts are part of a rich culture of student life and making. Involved in making their own work from day one, students are also immersed into the culture of their industry.  Events happen throughout the year, providing advanced screenings and special guests.
-          </p>
-        </div>
-      </div>
+    <div class="column left">
+      <h2>Upcoming Events</h2>
+      <div data-chapman-featured-event="https://events.chapman.edu/4352"></div>
     </div>
-    <div class="actions">
-      <a href="https://events.chapman.edu" class="events-feed-url theme-button">Dodge Events Calendar</a>
+    <div class="column right">
+      <div data-chapman-events-feed="https://events.chapman.edu"></div>
+      <div class="actions">
+        <a href="https://events.chapman.edu" class="events-feed-url theme-button">See All Events</a>
+      </div>
     </div>
   </div>
 </div>
