OmniNav builder builds identity block for Inside.

--- a/app/assets/stylesheets/omni_nav/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/modules/omni-nav.scss
@@ -1094,6 +1094,18 @@ a.cu_nav_button {
             overflow: hidden;
             position: relative;
         }
+
+        // Except for with login
+    }
+}
+
+// Inside has its own special needs
+#cu_nav.omninav-builder.inside {
+    // Login Component
+    #cu_login_container #cu_identity {
+        span.cu_name.logged-in {
+            padding-top: 4px;
+        }
     }
 }
 
