--- a/app/assets/stylesheets/widgets/chapman_events_feed.scss
+++ b/app/assets/stylesheets/widgets/chapman_events_feed.scss
@@ -53,7 +53,7 @@
     }
 
     p {
-      text-transform: lowercase;
+      text-transform: capitalize;
       margin: 0;
     }
 
@@ -78,11 +78,12 @@
       }
 
       p {
+        text-transform: uppercase;
         color: $red;
         font-weight: 800;
         line-height: 1;
       }
-    }
+    } 
   }
 
   .feed-column {
