Add medium-gray color as a variable.

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -84,6 +84,7 @@ $bg-red:             #98002e;
 
 // Type colors
 $color-dark-gray:    #2f2f2f;
+$color-medium-gray:  #676767;
 $color-light-gray:   #9a9996;
 $color-green:        #43ac6a;
 $color-yellow:       #cc6700;
